--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,15 @@
 {
   "manifest_version": 3,
-  "name": "My Vue Chrome Extension",
+  "name": "zytract",
   "version": "1.0.0",
   "description": "A Vue.js-based Chrome extension",
   "action": {
     "default_popup": "index.html"
+  },
+  "icons": {
+    "16": "icons/logo-16.png",
+    "48": "icons/logo-48.png",
+    "128": "icons/logo-128.png"
   },
   "permissions": ["storage"]
   
