--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
     "@vitejs/plugin-vue": "^2.3.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vite": "^2.9.15"
   }
 }
